--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,22 @@
-<nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <title><%= title %></title>
+</head>
+<body>
+    <nav>
+        <% if (user) { %> 
+      <a href="/songs" <%- title === 'All Songs' ? 'class="active"' : '' %>>ALL SONGS</a> |
 
-    <a href="/songs" <%- title === 'All Songs' ? 'class="active"' : '' %>>ALL SONGS</a>
-    <% if (user) { %>
-      <a href="/playlist/new"	<%- title === 'Add Performer' ? 'class="active"' : '' %>>
-      ADD Playlist</a>
-      <a href="/songs/new" <%- title === 'Add Song' ? 'class="active"' : '' %>>ADD SONG</a>
-      <a href="/logout">LOG OUT</a>
+      <a href="/songs/new" <%- title === 'Add Song' ? 'class="active"' : '' %>>ADD SONG</a> |
+      <a href="/logout">LOG OUT</a> |
     <% } else { %>
       <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
     <% } %>
   </nav>
-  </nav>
+  <main>
+    <h1><%= title %></h1>
