--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -5,4 +5,48 @@
         <div>Release Year: <%= song.releaseYear %> </div>
         <div>Song Duration: <%= song.songDuration %> </div>
     </section>
+
+    <h2>Comments</h2>
+    <form id="add-comment-form" method="POST"
+    action="/songs/<%= song._id %>/comments">
+    <label>Comment:</label>
+    <textarea name="text"></textarea>
+    <input type="submit" value="Add Comment">
+</form>
+
+<% if (song.comments.length) { %>
+    <table>
+        <thead>
+            <tr>
+                <th>User</th>
+                <th>Date</th>
+                <th>Comment</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% song.comments.forEach(function(c){ %>
+             <tr>
+                <td class="comment-user"><img alt="avatar" src="<%= c.userAvatar %>" referrerpolicy="no-referrer"><%= c.userName %></td>
+                <td><%= c.createdAt.toLocaleDateString() %></td>
+                <td><%= c.comment %></td>
+                <td>
+                    <% if (user?._id.equals(c.user)) { %>
+                        <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
+                            <button type="submit">DELETE</button>
+                        </form>
+                 <%   } %>
+                </td>
+             </tr>
+          <%  }); %>
+          <tr>
+            <td colspan="3"></td>
+            <td><strong><%= (total / song.comments.length).toFixed(1) %></strong></td>
+          </tr>
+        </tbody>
+    </table>
+    <% } else { %>
+        <h4>No Comments Yet</h4>
+    <% } %>
+
+
 <%- include('../partials/footer') %>
