--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -34,6 +34,13 @@
                         <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
                             <button type="submit">DELETE</button>
                         </form>
+                        <a href="/comments/<%= c._id %>/edit">
+                            <button>Edit Comment</button>
+                        </a>
+                    <% } else { %>
+                        <a href="/comments/<%= c._id %>/edit">
+                            <button>Update Comment</button>
+                        </a>
                  <% } %>
                 </td>
              </tr>
