--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+<div class ="main-content">
 <table id="playlist">
     <thead>
         <tr>
@@ -20,4 +21,5 @@
        <% }); %>
     </tbody>
 </table>
+</div>
 <%- include('../partials/footer') %>
